<?xml version="1.0"?>
<package format="2">
  <name>jimmbot_desktop</name>
  <version>0.1.0</version>
  <description>Metapackage for mhRobotics jimmBOT desktop software</description>

  <author email="m.halimi@gmail.com">Mergim Halimi</author>

  <maintainer email="m.halimi@gmail.com">Mergim Halimi</maintainer>

  <url type="website">www.mergimhalimi.com</url>
  <url type="repository">https://github.com/mh-Robotics/jimmbot_desktop</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>jimmbot_base</exec_depend>
  <exec_depend>jimmbot_bringup</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
